# Converge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKER.md  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.codex/: AGENTS.md
.github/: copilot-instructions.md
docs/: cli.md  configuration.md  execution-and-modes.md  getting-started.md  how-converge-runs.md  index.md  opik-trace-walkthrough-codex-enabled.md  opik-trace-walkthrough-heuristic.md  providers-and-execution.md  tasks-and-hitl.md  troubleshooting.md  ui.md
docs/internal/: codex-cli-from-converge.md
src/converge/: __init__.py
src/converge/agents/: __init__.py  base.py  codex_agent.py  copilot_agent.py  factory.py  policy.py
src/converge/cli/: __init__.py  main.py
src/converge/contracts/: __init__.py  api_contract.py
src/converge/core/: __init__.py  config.py  dotenv_compat.py  env.py  logging.py
src/converge/execution/: __init__.py  codex_apply.py  copilot_cli.py  git_utils.py  policy.py
src/converge/executors/: __init__.py  codex_cli.py
src/converge/integrations/: __init__.py  jira.py
src/converge/llm/: __init__.py  openai_client.py
src/converge/observability/: __init__.py  opik_client.py
src/converge/orchestration/: __init__.py  checkpointing.py  coordinator.py  graph.py  langgraph_compat.py  runner.py  state.py
src/converge/queue/: __init__.py  base.py  db.py  factory.py  redis_queue.py  schemas.py  sqs_queue.py
src/converge/server/: __init__.py  app.py  schemas.py  security.py
src/converge/sources/: __init__.py  base.py  github_source.py  jira_source.py
src/converge/ui/: __init__.py
src/converge/utils/: __init__.py
src/converge/worker/: __init__.py  poller.py
src/dotenv/: __init__.py
src/frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
src/frontend/.next-dev/: app-build-manifest.json  prerender-manifest.json  trace
src/frontend/.next-dev/cache/: .rscinfo
src/frontend/.next-dev/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
src/frontend/.next-dev/server/app/: page.js  page_client-reference-manifest.js
src/frontend/.next-dev/server/vendor-chunks/: @swc.js
src/frontend/.next-dev/static/chunks/: app-pages-internals.js  webpack.js
src/frontend/.next-dev/static/webpack/: 0f5282b97fd20fe5.webpack.hot-update.json  a3e40533d14b6f23.webpack.hot-update.json  bcc0354ad0756cf0.webpack.hot-update.json  webpack.0c2d2e74fcfc0940.hot-update.js  webpack.0f5282b97fd20fe5.hot-update.js  webpack.2e18e86ef4623fe1.hot-update.js  webpack.3ee2faaa88173160.hot-update.js  webpack.4151f554bb9ca5d7.hot-update.js  (+11 more)
src/frontend/.next-dev/types/: routes.d.ts  validator.ts
src/frontend/app/: globals.css  layout.tsx
src/frontend/app/projects/: page.tsx
src/frontend/app/tasks/: page.tsx
src/frontend/components/: Timeline.tsx
src/frontend/lib/: api.ts
src/langgraph/: __init__.py  graph.py
src/pydantic/: __init__.py
tests/: conftest.py  test_agents.py  test_checkpointing.py  test_cli.py  test_codex_apply.py  test_config.py  test_contract_diff.py  test_coordinator.py  test_copilot_cli.py  test_env.py  test_execution_policy.py  test_git_utils.py  test_openai_client.py  test_opik_client.py  test_policy.py  test_queue.py  test_server.py  test_smoke.py  test_state.py  test_worker.py
(+33 files in other folders)
